--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ExpenseFlow - Modern Expense Tracker</title>
+  <title>DenaroTrack - Modern Expense Tracker</title>
   <meta name="description" content="A modern, responsive expense tracker with a fresh design approach">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#3b82f6">
 </head>
 <body>
   <div class="container">
-    <div class="dashboard-grid">
-      <!-- Top area with greeting and buttons -->
+    <!-- Top area with greeting and buttons -->
       <div class="top-area">
         <div></div>
         <div style="text-align: right;">
@@ -26,13 +27,12 @@
       
       <div class="card card-span-12">
         <div class="text-center">
-          <h1 class="text-display text-accent mb-4">ExpenseFlow</h1>
+          <h1 class="text-display text-accent mb-4">DenaroTrack</h1>
           <p class="text-body text-secondary mb-6">A modern expense tracking application</p>
           <p class="text-body mb-6">Redirecting to the period selection page...</p>
           <div class="loading-spinner"></div>
         </div>
       </div>
-    </div>
   </div>
 
   <script src="js/theme.js"></script>
@@ -44,3 +44,4 @@
   </script>
 </body>
 </html>
+
