--- a/expenses.html
+++ b/expenses.html
@@ -93,13 +93,14 @@
                 </button>
               </div>
             </div>
+            <p class="text-body text-secondary">Add your first expense to get started</p>
           </div>
 
           <!-- Add Transaction Buttons -->
           <div class="card card-span-12">
-            <div class="flex justify-between items-center mb-4">
+            <div class="flex justify-between items-center mb-4 flex-wrap gap-2">
               <h2 class="text-h2">Transactions</h2>
-              <div class="flex gap-2">
+              <div class="flex gap-2 flex-wrap transaction-actions">
                 <button id="add-expense-btn" class="btn btn-primary">
                   Add Expense
                 </button>
@@ -123,22 +124,24 @@
               </div>
             </div>
           </div>
-        </section> <!-- page-body -->
-    </main>
+  </div>
+  </div>
+  </div>
+  </section> <!-- page-body -->
+  </main>
 
-    <script src="js/theme.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/storage.js"></script>
-    <script src="js/audit.js"></script>
-    <script src="js/sidebar.js"></script>
-    <script src="js/modal.js"></script>
-    <script src="js/expenses.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script>
-      // Expenses page initialization now handled by bootstrap.js
-    </script>
+  <script src="js/theme.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/storage.js"></script>
+  <script src="js/audit.js"></script>
+  <script src="js/sidebar.js"></script>
+  <script src="js/modal.js"></script>
+  <script src="js/expenses.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script>
+    // Expenses page initialization now handled by bootstrap.js
+  </script>
   </div>
 </body>
 
 </html>
-
