--- a/categories.html
+++ b/categories.html
@@ -178,22 +178,20 @@
               </div>
             </div>
           </div>
-  </div>
-  </section> <!-- page-body -->
-  </main>
+        </section> <!-- page-body -->
+      </section> <!-- page-container -->
+    </main>
 
-  <script src="js/theme.js"></script>
-  <script src="js/utils.js"></script>
-  <script src="js/storage.js"></script>
-  <script src="js/audit.js"></script>
-  <script src="js/sidebar.js"></script>
-  <script src="js/categories.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <script>
-    // Categories page initialization now handled by bootstrap.js
-  </script>
-  </div>
+    <script src="js/theme.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/audit.js"></script>
+    <script src="js/sidebar.js"></script>
+    <script src="js/categories.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script>
+      // Categories page initialization now handled by bootstrap.js
+    </script>
 </body>
 
 </html>
-
