--- a/setting.html
+++ b/setting.html
@@ -224,6 +224,7 @@
           </div>
 
         </section> <!-- page-body -->
+      </section> <!-- page-container -->
     </main>
 
     <script src="js/theme.js"></script>
@@ -237,4 +238,3 @@
 </body>
 
 </html>
-
