--- a/expenses.html
+++ b/expenses.html
@@ -104,7 +104,7 @@
                 <button id="add-expense-btn" class="btn btn-primary">
                   Add Expense
                 </button>
-                <button id="add-income-btn" class="btn btn-accent">
+                <button id="add-income-btn" class="btn btn-success">
                   Add Income
                 </button>
                 <button id="clear-month-btn" class="btn btn-danger">
@@ -124,24 +124,22 @@
               </div>
             </div>
           </div>
-  </div>
-  </div>
-  </div>
-  </section> <!-- page-body -->
-  </main>
+        </section> <!-- page-body -->
+      </section> <!-- page-container -->
+    </main>
 
-  <script src="js/theme.js"></script>
-  <script src="js/utils.js"></script>
-  <script src="js/storage.js"></script>
-  <script src="js/audit.js"></script>
-  <script src="js/sidebar.js"></script>
-  <script src="js/modal.js"></script>
-  <script src="js/expenses.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <script>
-    // Expenses page initialization now handled by bootstrap.js
-  </script>
-  </div>
+    <script src="js/theme.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/audit.js"></script>
+    <script src="js/sidebar.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/expenses.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script>
+      // Expenses page initialization now handled by bootstrap.js
+    </script>
+
 </body>
 
 </html>
