--- a/period-selection.html
+++ b/period-selection.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DenaroTrack - Select Period</title>
   <meta name="description" content="Select a period to track your expenses">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css?v=fix1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -52,7 +52,7 @@
   </div>
 
   <script src="js/theme.js"></script>
-  <script src="js/utils.js"></script>
+  <script src="js/utils.js?v=fix1"></script>
   <script src="js/storage.js"></script>
   <script src="js/audit.js"></script>
   <script src="js/period.js"></script>
@@ -60,4 +60,3 @@
 </body>
 
 </html>
-
