--- a/report.html
+++ b/report.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DenaroTrack - Reports</title>
   <meta name="description" content="Financial reports and analytics">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css?v=fix1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -111,7 +111,7 @@
     </main>
 
     <script src="js/theme.js"></script>
-    <script src="js/utils.js"></script>
+    <script src="js/utils.js?v=fix1"></script>
     <script src="js/storage.js"></script>
     <script src="js/audit.js"></script>
     <script src="js/sidebar.js"></script>
@@ -123,4 +123,3 @@
 </body>
 
 </html>
-
