--- a/report.html
+++ b/report.html
@@ -32,12 +32,9 @@
               <p class="text-body text-secondary mt-2">Analytics and financial reports</p>
             </div>
           </div>
-        </header>
-
-        <section class="page-body">
 
           <!-- Period Display -->
-          <div class="period-selector card card-span-12">
+          <div class="period-selector mt-6 mb-2">
             <div class="flex items-center gap-3">
               <button id="prev-month-btn" class="btn btn-ghost btn-icon">
                 ←
@@ -51,6 +48,11 @@
               Today
             </button>
           </div>
+        </header>
+
+        <section class="page-body">
+
+
 
           <!-- Summary Stats Grid -->
           <div class="dashboard-grid">
