--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DenaroTrack - Dashboard</title>
   <meta name="description" content="Expense tracking dashboard">
-  <link rel="stylesheet" href="css/styles.css?v=fix1">
+  <link rel="stylesheet" href="css/styles.css?v=fix2">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -82,6 +82,9 @@
                 <h2 class="text-h2 mb-4">Spend</h2>
                 <div class="text-caption text-secondary mb-3">Spending vs Budget</div>
                 <div id="spent-display" class="stat-value text-danger">₹ 0.00</div>
+                <div class="chart-container mt-4" style="position: relative; height: 200px;">
+                  <canvas id="categoryChart"></canvas>
+                </div>
               </div>
 
               <!-- Expense strategy card with bar chart -->
@@ -89,6 +92,9 @@
                 <h2 class="text-h2 mb-4">Remaining</h2>
                 <div class="text-caption text-secondary mb-3">Remaining budget</div>
                 <div id="remaining-display" class="stat-value text-accent">₹ 0.00</div>
+                <div class="chart-container mt-4" style="position: relative; height: 200px;">
+                  <canvas id="spendingTrendChart"></canvas>
+                </div>
               </div>
 
               <!-- Set Budget card -->
